--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     </script>
     <!-- end Google Analytics -->
 
+    <!-- Google adSense -->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4530873656649886"
+        crossorigin="anonymous"></script>
+    <!-- End Google adSense -->
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
       w[l] = w[l] || [];
